manifest-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-pod
  labels: 
    app: demoapp
spec:
  containers: 
  - image: nginx
    name: nginx-demoapp
    ports:
    - containerPort: 80
