pod.yaml
apiVersion: v1
kind: Pod
metadata: 
 name: mypod
 labels: 
  app: nginx

spec:
 containers: 
 - name: mycont
   image: nginx
   ports:
   - containerPort: 80

---
apiVersion: v1
kind: Service
metadata: 
 name: my-service

spec:
 type: ClusterIP
 selector: 
  app: nginx
 ports:
  protocol: TCP
  port: 80
  targetPort: 80
